update product handler
